--- a/glek/Documentation/Introduction.stories.mdx
+++ b/glek/Documentation/Introduction.stories.mdx
@@ -5,3 +5,6 @@
 # BEM VINDO AO GLEK
 
 
+## fontes
+### inter https://github.com/rsms/inter
+### Tomorrow https://fontmeme.com/fontes/fonte-tomorrow/
